# dialog-yaml

./: .env.dev  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  README.ru.md  example.pypirc  main.py  pyproject.toml  requirements.txt  setup.cfg
core/: __init__.py  core.py  decorators.py  exceptions.py  middleware.py  reader.py  states.py
core/models/: __init__.py  base.py  dialog.py  window.py
core/models/funcs/: __init__.py  func.py
core/models/kbd/: __init__.py  keyboard.py
core/models/selects/: __init__.py  select.py
core/models/texts/: __init__.py  text.py
core/models/widgets/: __init__.py
core/models/widgets/calendars/: __init__.py  calendar.py
core/models/widgets/counters/: __init__.py  counter.py
core/models/widgets/inputs/: __init__.py  input.py
core/models/widgets/kbd/: __init__.py  keyboard.py
core/models/widgets/medias/: __init__.py  media.py
core/models/widgets/scrolls/: __init__.py  scroll.py
core/models/widgets/selects/: __init__.py  select.py
core/models/widgets/texts/: __init__.py  text.py
data/: dialogs.yaml  layouts.yaml  main.yaml
data/components/: menu_button.yaml
examples/mega/: bot.py
examples/mega/bot/: __init__.py  calendars.py  callbacks.py  counters.py  layouts.py  multiwidgets.py  scrolls.py  selects.py  switch.py
examples/mega/bot/custom/: __init__.py  calendars.py
examples/mega/data/: main.yaml  menu.yaml  scrolls.yaml
src/: __init__.py  core.py  decorators.py  exceptions.py  middleware.py  reader.py  states.py
src/dialog_yml/: __init__.py  core.py  middleware.py  reader.py  states.py  utils.py
src/dialog_yml/models/: __init__.py  base.py  dialog.py  window.py
src/dialog_yml/models/funcs/: __init__.py  func.py
src/dialog_yml/models/widgets/calendars/: calendar.py
src/dialog_yml/models/widgets/counters/: counter.py
src/dialog_yml/models/widgets/inputs/: input.py
src/dialog_yml/models/widgets/kbd/: __init__.py  keyboard.py
src/dialog_yml/models/widgets/medias/: media.py
src/dialog_yml/models/widgets/scrolls/: scroll.py
src/dialog_yml/models/widgets/selects/: select.py
src/dialog_yml/models/widgets/texts/: __init__.py  text.py
src/models/: __init__.py  base.py  dialog.py  window.py
src/models/funcs/: __init__.py  func.py
src/models/widgets/calendars/: calendar.py
src/models/widgets/counters/: counter.py
src/models/widgets/inputs/: input.py
src/models/widgets/kbd/: __init__.py  keyboard.py
src/models/widgets/medias/: media.py
src/models/widgets/scrolls/: scroll.py
src/models/widgets/selects/: __init__.py  select.py
src/models/widgets/texts/: __init__.py  text.py
test/: conftest.py  test_reader.py  test_states.py
test/data/: nested.yaml
test/models/: test_base.py  test_func.py  test_model_factory.py  test_widgets.py  test_yaml_class.py
test/models/funcs/: test_func.py  test_func_registry.py  test_funcs.py
test/models/widgets/: conftest.py  test_calendars.py  test_counters.py  test_input.py  test_keyboards.py  test_medias.py  test_scrolls.py  test_selects.py  test_texts.py
tests/: conftest.py  test_dialog_yaml_builder.py  test_reader.py  test_states.py
tests/data/: list.yml
tests/functional/: test_end_to_end.py
tests/integration/: test_dialog_integration.py
tests/models/: test_model_factory.py
tests/models/funcs/: test_func_registry.py  test_funcs.py
tests/models/widgets/: conftest.py  test_calendars.py  test_counters.py  test_input.py  test_keyboards.py  test_medias.py  test_scrolls.py  test_selects.py  test_texts.py
tests/unit/: test_dialog_yaml_builder.py  test_reader.py  test_states.py
tests/unit/test_models/: test_model_factory.py
tests/unit/test_models/widgets/: test_inputs.py  test_selects.py
