[project]
name = "dialog-yaml"
version = "0.1.0"
description = "A Python library that enables building aiogram-dialog applications using YAML configuration files"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Mikhail Vlasenko"},
]
keywords = ["aiogram", "aiogram-dialog", "yaml", "telegram", "bot", "dialogs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "babel>=2.17.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "pyyaml-include>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
# Scripts can be added here if needed

[tool.ruff]
target-version = "py313"
line-length = 91

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
omit = [
    "*/examples/*",
    "*/tests/*",
]
