[project]
name = "dialog-yml"
version = "0.1.3"
description = "A Python library that enables building aiogram-dialog applications using YAML configuration files"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Mikhail Vlasenko", email = "ya@smkthat.ru"},
]
maintainers = [
    {name = "Mikhail Vlasenko", email = "ya@smkthat.ru"},
]
keywords = ["aiogram", "aiogram-dialog", "yaml", "telegram", "bot", "dialogs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog~=2.4",
    "babel>=2.17.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "pyyaml-include>=2.2",
]

[project.urls]
Homepage = "https://github.com/smkthat/dialog-yml"
Repository = "https://github.com/smkthat/dialog-yml"
Issues = "https://github.com/smkthat/dialog-yml/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
# TODO: add scripts here

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dialog_yml*"]

[tool.ruff]
target-version = "py313"
line-length = 91

[tool.coverage.run]
omit = [
    "*/examples/*",
    "*/tests/*",
]
